--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                     <input type="month" name="date" id="date" style="font-size:12px;" aria-label="Payslip Month">
                 </div>
             </div>
+            <div class="company-details">
+                <h2 class="company-details-header">Company Details</h2>
+                <h1><input type="text" placeholder="Company Name" aria-label="Company Name"></h1>
+                <input type="text" placeholder="Company Address" aria-label="Company Address">
+            </div>
 
             <div class="employee-summary">
                 <h2>Employee Pay Summary</h2>
